{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 61,
  "lineage": "22b07eb0-8a1e-a158-beae-d5b8764ba7ad",
  "resources": [
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-gateway-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0384d8e3d38a34556",
            "domain": "vpc",
            "id": "eipalloc-0384d8e3d38a34556",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-207-86-27.compute-1.amazonaws.com",
            "public_ip": "44.207.86.27",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-gateway-1a"
            },
            "tags_all": {
              "Name": "eip-nat-gateway-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-gateway-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c35b83aa9f01ccca",
            "domain": "vpc",
            "id": "eipalloc-0c35b83aa9f01ccca",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-169-86-234.compute-1.amazonaws.com",
            "public_ip": "35.169.86.234",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-gateway-1b"
            },
            "tags_all": {
              "Name": "eip-nat-gateway-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0384d8e3d38a34556",
            "association_id": "eipassoc-0633e2fdc5cb5eaab",
            "connectivity_type": "public",
            "id": "nat-03cb0913ad69bf3ba",
            "network_interface_id": "eni-0e36762134c651c3e",
            "private_ip": "10.0.101.59",
            "public_ip": "44.207.86.27",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa6261706e7cb565",
            "tags": {
              "Name": "nat-gateway-1a"
            },
            "tags_all": {
              "Name": "nat-gateway-1a"
            }
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.eip-nat-gateway-1a",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c35b83aa9f01ccca",
            "association_id": "eipassoc-010616ecd0973ae45",
            "connectivity_type": "public",
            "id": "nat-080f3d5094697f28e",
            "network_interface_id": "eni-03bc641622547ba94",
            "private_ip": "10.0.102.253",
            "public_ip": "35.169.86.234",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0874e0b040c38b302",
            "tags": {
              "Name": "nat-gateway-1b"
            },
            "tags_all": {
              "Name": "nat-gateway-1b"
            }
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.eip-nat-gateway-1b",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0ed6d5c15c352a99b",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03cb0913ad69bf3ba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-080f3d5094697f28e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_RT"
            },
            "tags_all": {
              "Name": "private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f80ba1d195e38e29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Nat_Gateway.aws_eip.eip-nat-gateway-1a",
            "module.Nat_Gateway.aws_eip.eip-nat-gateway-1b",
            "module.Nat_Gateway.aws_nat_gateway.nat-gateway-1a",
            "module.Nat_Gateway.aws_nat_gateway.nat-gateway-1b",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pub_sub_1b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712788790:security-group/sg-00ac44c3bde2018eb",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ac44c3bde2018eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "security group",
            "name_prefix": "",
            "owner_id": "339712788790",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ram-sg"
            },
            "tags_all": {
              "Name": "Ram-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f80ba1d195e38e29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712788790:internet-gateway/igw-0aa9defa48a61b73b",
            "id": "igw-0aa9defa48a61b73b",
            "owner_id": "339712788790",
            "tags": {
              "Name": "Ram-igw"
            },
            "tags_all": {
              "Name": "Ram-igw"
            },
            "vpc_id": "vpc-0f80ba1d195e38e29"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712788790:route-table/rtb-0a6b44b2767afbddd",
            "id": "rtb-0a6b44b2767afbddd",
            "owner_id": "339712788790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa9defa48a61b73b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ram-public-RT"
            },
            "tags_all": {
              "Name": "Ram-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f80ba1d195e38e29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_1a_with_public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9bff683ebd88b2d",
            "route_table_id": "rtb-0a6b44b2767afbddd",
            "subnet_id": "subnet-0fa6261706e7cb565"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public-RT",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_1b_with_public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0183d937d7fd40d",
            "route_table_id": "rtb-0a6b44b2767afbddd",
            "subnet_id": "subnet-0874e0b040c38b302"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public-RT",
            "module.vpc.aws_subnet.pub_sub_1b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_1st",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712788790:subnet/subnet-0d0ce07d7522b8f6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0ce07d7522b8f6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712788790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pri_sub_1st"
            },
            "tags_all": {
              "name": "pri_sub_1st"
            },
            "vpc_id": "vpc-0f80ba1d195e38e29"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_2nd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712788790:subnet/subnet-0b1b96d6b7e119f36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1b96d6b7e119f36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712788790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pri_sub_2nd"
            },
            "tags_all": {
              "name": "pri_sub_2nd"
            },
            "vpc_id": "vpc-0f80ba1d195e38e29"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712788790:subnet/subnet-0fa6261706e7cb565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa6261706e7cb565",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712788790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pub_sub_first"
            },
            "tags_all": {
              "name": "pub_sub_first"
            },
            "vpc_id": "vpc-0f80ba1d195e38e29"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712788790:subnet/subnet-0874e0b040c38b302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0874e0b040c38b302",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712788790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pub_sub_2nd"
            },
            "tags_all": {
              "name": "pub_sub_2nd"
            },
            "vpc_id": "vpc-0f80ba1d195e38e29"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712788790:vpc/vpc-0f80ba1d195e38e29",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-012596b93f4ea6002",
            "default_route_table_id": "rtb-0d3e2da51749e4215",
            "default_security_group_id": "sg-08747117c81aa5ba8",
            "dhcp_options_id": "dopt-0ddddb9d78db2d038",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f80ba1d195e38e29",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3e2da51749e4215",
            "owner_id": "339712788790",
            "tags": {
              "Name": "Ram-vpc"
            },
            "tags_all": {
              "Name": "Ram-vpc"
            }
          }
        }
      ]
    }
  ]
}